--- a/take_out/src/main/resources/application.yml
+++ b/take_out/src/main/resources/application.yml
@@ -8,11 +8,11 @@ spring:
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://192.168.32.129:3306/store?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+      url: jdbc:mysql://192.168.32.130:3306/store?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
       username: root
       password: 123123
   redis:
-    host: 192.168.32.129
+    host: 192.168.32.130
     port: 6379
 mybatis-plus:
   configuration:
@@ -20,4 +20,8 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   global-config:
     db-config:
-      id-type: assign_id
+      id-type: auto
+pagehelper:
+  reasonable: true
+  support-methods-arguments: true
+  params: count=countSql
