--- a/take_out/pom.xml
+++ b/take_out/pom.xml
@@ -84,6 +84,11 @@
             <artifactId>java-jwt</artifactId>
             <version>3.19.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.4.5</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
